@@ -1,22 +1,4 @@
-/**
- * (c) 2002-2021 JADAPTIVE Limited. All Rights Reserved.
- *
- * This file is part of the Maverick Synergy Java SSH API.
- *
- * Maverick Synergy is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Lesser General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
- *
- * Maverick Synergy is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Lesser General Public License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public License
- * along with Maverick Synergy.  If not, see <https://www.gnu.org/licenses/>.
- */
-/* HEADER */
+
 package com.sshtools.common.nio;
 
 import java.util.Iterator;
@@ -50,11 +32,11 @@ public class IdleStateManager  {
      */
     public synchronized void reset(IdleStateListener obj) {
     	if(listeners.containsKey(obj))
-    		listeners.put(obj, new Long(System.currentTimeMillis()));
+    		listeners.put(obj, Long.valueOf(System.currentTimeMillis()));
     }
     
     public synchronized void register(IdleStateListener obj) {
-    	listeners.put(obj, new Long(System.currentTimeMillis()));
+    	listeners.put(obj, Long.valueOf(System.currentTimeMillis()));
     }
 
     /**
