@@ -1,21 +1,3 @@
-/**
- * (c) 2002-2021 JADAPTIVE Limited. All Rights Reserved.
- *
- * This file is part of the Maverick Synergy Java SSH API.
- *
- * Maverick Synergy is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Lesser General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
- *
- * Maverick Synergy is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Lesser General Public License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public License
- * along with Maverick Synergy.  If not, see <https://www.gnu.org/licenses/>.
- */
 package com.sshtools.common.sftp.extensions.filter;
 
 import java.io.FileNotFoundException;
@@ -90,7 +72,7 @@ public class OpenDirectoryWithFilterExtension implements SftpExtension {
 										sftp.getConnection())
 								.addAttribute(
 										EventCodes.ATTRIBUTE_BYTES_TRANSFERED,
-										new Long(0))
+										Long.valueOf(0))
 								.addAttribute(
 										EventCodes.ATTRIBUTE_HANDLE,
 										handle)
@@ -117,12 +99,12 @@ public class OpenDirectoryWithFilterExtension implements SftpExtension {
 
 	@Override
 	public boolean isDeclaredInVersion() {
-		return false;
+		return true;
 	}
 
 	@Override
 	public byte[] getDefaultData() {
-		throw new UnsupportedOperationException();
+		return new byte[] { };
 	}
 
 	@Override
